--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   "devDependencies": {
     "@commitlint/cli": "16.2.1",
     "@commitlint/config-conventional": "16.2.1",
+    "@shlroland/commitizen-config": "^0.1.2",
     "@shlroland/commitlint-config": "0.1.2",
     "@shlroland/eslint-config": "0.1.2",
     "@shlroland/lint-staged": "1.0.1",
     "@shlroland/prettier-config": "0.1.1",
+    "commitizen": "^4.2.5",
+    "cz-git": "^1.3.11",
     "eslint": "8.10.0",
     "husky": "^8.0.0",
     "lint-staged": "12.3.4",
