--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@shlroland/eslint-config": "0.1.2",
     "@shlroland/lint-staged": "1.0.1",
     "@shlroland/prettier-config": "0.1.1",
+    "@types/node": "^18.8.5",
     "commitizen": "^4.2.5",
     "cz-git": "^1.3.11",
     "eslint": "8.10.0",
