--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,13 +5,23 @@
   "publishConfig": {
     "access": "public"
   },
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./package.json": "./package.json"
+  },
   "keywords": [],
   "engines": {
     "node": ">=14"
   },
   "license": "MIT",
   "scripts": {
-    "reset": "rm -rf dist"
+    "reset": "rm -rf dist",
+    "build": "pnpm reset && tsc "
   },
   "dependencies": {
     "camelcase": "^6.2.0",
