--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,4 +1,8 @@
 {
   "extends": "../../tsconfig",
-  "include": ["src"]
+  "include": ["src"],
+  "compilerOptions": {
+    "outDir": "./dist",
+    "sourceMap": false
+  }
 }
