--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "husky": "^8.0.0",
     "lint-staged": "12.3.4",
     "prettier": "2.5.1",
+    "tsup": "^6.3.0",
     "typescript": "^4.8.4"
   }
 }
