--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -7,7 +7,7 @@
     "access": "public"
   },
   "bin": {
-    "svge": "./bin/svge"
+    "svge": "./bin/svge.js"
   },
   "keywords": [],
   "engines": {
@@ -16,7 +16,7 @@
   "license": "MIT",
   "scripts": {
     "reset": "rm -rf dist",
-    "build": "pnpm reset && tsc "
+    "build": "pnpm reset && tsup src/index.ts --dts --format esm,cjs"
   },
   "dependencies": {
     "@svge/core": "workspace:^0.0.1",
