--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -3,6 +3,7 @@
   "include": ["src"],
   "compilerOptions": {
     "outDir": "./dist",
-    "sourceMap": false
+    "sourceMap": false,
+    "allowSyntheticDefaultImports": true
   }
 }
